# ADC2018

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/donturner/ads2018/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AMEN.raw
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  MegaOscillator.h  Mixer.h  Oscillator.h  SoundRecording.cpp  SoundRecording.h  native-lib.cpp
app/src/main/cpp/utils/: logging.h
app/src/main/java/com/example/donturner/adc2018/: MainActivity.java
app/src/main/java/com/example/donturner/ads2018/: MainActivity.java
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/donturner/ads2018/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
